# embedding-semantic-features

./: Figure 1.xlsx  LLM_Ratings.xlsx  README.md  SLACK_SETUP_GUIDE.md  config.yaml  credentials.yaml  main.py  pyproject.toml
assets/: LLM_Ratings.xlsx
src/: __init__.py  embedding.py  utils.py
src/data/dict/: danger.py  size.py
src/evaluation/: __init__.py  analyzing.py  comparison.py  loading.py  scoring.py
src/methods/: __init__.py  average_st.py
